// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<Fragment>
  <ForwardRef(Box)
    sx={
      Object {
        "p": undefined,
      }
    }
  >
    <ForwardRef(IconButton)
      aria-label="close"
      onClick={[Function]}
    >
      <Memo(ForwardRef(CloseIcon)) />
    </ForwardRef(IconButton)>
  </ForwardRef(Box)>
  <ForwardRef(Dialog)
    open={true}
  >
    <ForwardRef(DialogTitle)>
      投稿を保存しますか？
    </ForwardRef(DialogTitle)>
    <ForwardRef(DialogContent)>
      （未確定）下書き保存すれば、後から再編集して投稿できます。
    </ForwardRef(DialogContent)>
    <ForwardRef(DialogActions)>
      <ForwardRef(Button)
        onClick={[Function]}
        variant="outlined"
      >
        破棄
      </ForwardRef(Button)>
      <ForwardRef(LoadingButton)
        autoFocus={true}
        loading={false}
        onClick={[Function]}
        variant="contained"
      >
        保存
      </ForwardRef(LoadingButton)>
    </ForwardRef(DialogActions)>
  </ForwardRef(Dialog)>
</Fragment>
`;

exports[`Shallow Snapshot Tests with padding 1`] = `
<Fragment>
  <ForwardRef(Box)
    sx={
      Object {
        "p": 1,
      }
    }
  >
    <ForwardRef(IconButton)
      aria-label="close"
      onClick={[Function]}
    >
      <Memo(ForwardRef(CloseIcon)) />
    </ForwardRef(IconButton)>
  </ForwardRef(Box)>
  <ForwardRef(Dialog)
    open={true}
  >
    <ForwardRef(DialogTitle)>
      投稿を保存しますか？
    </ForwardRef(DialogTitle)>
    <ForwardRef(DialogContent)>
      （未確定）下書き保存すれば、後から再編集して投稿できます。
    </ForwardRef(DialogContent)>
    <ForwardRef(DialogActions)>
      <ForwardRef(Button)
        onClick={[Function]}
        variant="outlined"
      >
        破棄
      </ForwardRef(Button)>
      <ForwardRef(LoadingButton)
        autoFocus={true}
        loading={false}
        onClick={[Function]}
        variant="contained"
      >
        保存
      </ForwardRef(LoadingButton)>
    </ForwardRef(DialogActions)>
  </ForwardRef(Dialog)>
</Fragment>
`;
